spec/e2e/string/unterminated.lit
# error: [line 3] Error: Unterminated string.
"this string has no close quote
